test/litecheck/cases/run_invalid-1.expected
invalid RUN directive: `echo ${34 / "hello"}', caused by
(loaded):1:13: [semantic error] require `Int' type, but is `String' type
echo ${34 / "hello"}
            ^~~~~~~

